parser/tests/bad/type01-1.st
% type of the expression cannot be assigned to the reference
%   scalar type

var i := 0
var s := "0"
s :=  i
